--- a/index.html
+++ b/index.html
@@ -7,26 +7,30 @@
     <title>NavBarDemo</title>
   </head>
   <body>
-    <nav class="navigation-bar">
-      <div class="main">
-        <h1>Creative Brand</h1>
-        <button>MENU</button>
-      </div>
+    <nav class="nav-bar">
+      <div class="wrapper">
+        <div class="nav-main">
+          <h1 class="brand">Creative<span>Brand</span></h1>
+          <button class="menu-toggle"><svg xmlns="http://www.w3.org/2000/svg" class="menuburger" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16" />
+          </svg></button>
+        </div>
       
-      <ul class="menu">
-        <li class="menu-item">
-        <a href="#">Register</a>
-        </li>
-        <li class="menu-item">
-          <a href="#">Services</a>
-        </li>
-        <li class="menu-item">
-          <a href="#">Pricing</a>
-        </li>
-      <li class="menu-item">
-        <a href="#">Contact Us</a>
-      </li>
-    </ul>
+       <ul class="menu">
+          <li class="menu-item">
+            <a href="#">Register</a>
+          </li>
+          <li class="menu-item">
+            <a href="#">Services</a>
+          </li>
+          <li class="menu-item">
+            <a href="#">Pricing</a>
+          </li>
+          <li class="menu-item">
+            <a href="#">Contact Us</a>
+          </li>
+        </ul>
+        </div>
     </nav>
     <script type="module" src="/main.js"></script>
   </body>
